# customer-churn-prediction

./: .env  .gitignore  README.md  cspell.json  pyproject.toml
containers/: .env  docker-compose.yml
data/load/: create_table.py  load_data.py  query.sql  read_db.py
data/processed/: cleaned_churn.csv
docs/: PROJECT.md  PROJECT_STRUCTURE.md
models/: logistic_regression_model.joblib
notebooks/: clen_data.ipynb  explore.ipynb  model_training.ipynb  visualizations.ipynb
scripts/: create_table.py  load_data.py  read_db.py  set_config.py
src/common/database/: database.py
src/data/load/: create_table.py  load_data.py  read_db.py
src/models/: gradient_boosting_model.joblib
src/notebooks/: clean_data.ipynb  explore.ipynb  model_training.ipynb  visualizations.ipynb
