[tool.poetry]
name = "02-customer-churn-prediction"
version = "0.1.0"
description = ""
authors = ["ocamilomontealegre <ocamilomontealegre@gmail.com>"]
packages = [{ include = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
psycopg2 = "^2.9.10"
python-dotenv = "^1.1.0"

[tool.poetry.scripts]
create_table = "scripts.create_table:main"
load_data = "scripts.load_data:main"
read_db = "scripts.read_db:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
