[tool.poetry]
name = "02-customer-churn-prediction"
version = "0.1.0"
description = ""
authors = ["ocamilomontealegre <ocamilomontealegre@gmail.com>"]
packages = [{ include = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
psycopg2 = "^2.9.10"
python-dotenv = "^1.1.0"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
notebook = "^7.4.2"
scikit-learn = "^1.6.1"
xgboost = "^3.0.2"
joblib = "^1.5.1"
psycopg2-binary = "^2.9.10"

[tool.poetry.scripts]
config = "scripts.set_config:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
